--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "nearley-template",
-  "version": "0.0.1",
-  "description": "A template for nearley parsers",
+  "version": "0.0.2",
+  "description": "Your own DSL, in javascript, in a nice reusable package!",
   "main": "index.js",
   "bin": {
     "nearleyt": "bin/nearleyt.js"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/appology/nearley-template.git"
+  },
+  "author": "appology",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/appology/nearley-template/issues"
+  },
+  "homepage": "https://github.com/appology/nearley-template#readme",
   "devDependencies": {
     "ora": "^1.3.0",
     "shelljs": "^0.7.8"
