--- a/template/package.json
+++ b/template/package.json
@@ -25,9 +25,9 @@
     "babel": "node scripts/babel.js",
     "build": "node scripts/build.js",
     "example": "node scripts/example.js",
-    "postinstall": "npm run build",
     "test": "node scripts/test.js",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
