--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "nearley-template",
-  "version": "0.0.3",
+  "version": "0.0.5-25",
   "description": "Your own DSL, in javascript, in a nice reusable package!",
   "main": "index.js",
   "bin": {
     "nearleyt": "bin/nearleyt.js"
+  },
+  "scripts": {
+    "build": "node scripts/build.js",
+    "clean": "node scripts/clean.js",
+    "prepublish": "npm run build",
+    "postpublish": "npm run clean",
+    "prerelease": "git add . && git commit -m 'prerelease' && npm version prerelease && npm publish --tag next"
   },
   "repository": {
     "type": "git",
@@ -18,6 +25,8 @@
   "homepage": "https://github.com/appology/nearley-template#readme",
   "dependencies": {
     "ora": "^1.3.0",
-    "shelljs": "^0.7.8"
-  }
+    "shelljs": "^0.7.8",
+    "zip-local": "^0.3.4"
+  },
+  "devDependencies": {}
 }
