--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.tabSize": 2,
     "editor.detectIndentation": false,
     "files.exclude": {
-      "node_modules/": true
+      "node_modules/": true,
+      "template.zip": true
     }
   }
